--- a/index.html
+++ b/index.html
@@ -10,8 +10,37 @@
 <body>
     <nav>Weather Dashboard</nav>
     <main>
-        <div id="search-area">search</div>
-        <div id="weather-area">weather</div>
+        <aside id="search-area">
+            <h2>Search for a City</h2>
+            <form>
+                <input placeholder="Search"/>
+                <button>Search</button>
+            </form>
+            <hr />
+            <div id="buttons-container">
+
+            </div>
+        </aside>
+        <div id="weather-area">
+            <div>
+                <h2>London date</h2>
+                <p>Temperature: </p>
+                <p>Wind: </p>
+                <p>Humidity: </p>
+            </div>
+        
+            <div>
+                <h2>5-Day forecast</h2>
+                <div id="forecast-cards">
+                    <div class="card">card1</div>
+                    <div class="card">card2</div>
+                    <div class="card">card3</div>
+                    <div class="card">card4</div>
+                    <div class="card">card5</div>
+                </div>
+            </div>
+        </div>
     </main>
+    <script src="./script.js"></script>
 </body>
 </html>
