--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://pro.openweathermap.org/data/2.5/forecast/hourly?lat={lat}&lon={lon}&appid=4hvR8d7eaHdWg1tmEP8XtVYXwQTVRHiR"></script>
     <link rel="stylesheet" href="./assets/style.css">
     <title>Weather Dashboard</title>
 </head>
@@ -11,7 +13,7 @@
     <nav>Weather Dashboard</nav>
     <main>
         <aside id="search-area">
-            <h2>Search for a City</h2>
+            <h2 style="color: rgb(8, 8, 118);">Search for a City</h2>
             <form>
                 <input placeholder="Search"/>
                 <button>Search</button>
@@ -23,14 +25,14 @@
         </aside>
         <div id="weather-area">
             <div>
-                <h2>London date</h2>
+                <h2 style="color: rgb(8, 8, 118);">London date</h2>
                 <p>Temperature: </p>
                 <p>Wind: </p>
                 <p>Humidity: </p>
             </div>
         
             <div>
-                <h2>5-Day forecast</h2>
+                <h2 style="color: rgb(8, 8, 118); padding: 15px; text-align: center;">5-Day forecast</h2>
                 <div id="forecast-cards">
                     <div class="card">card1</div>
                     <div class="card">card2</div>
