add to REDAME, further color styling

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </aside>
         <div id="weather-area">
             <div>
-                <h2 style="color: rgb(8, 8, 118);">London date</h2>
+                <h2 style="color: rgb(8, 8, 118)">London date</h2>
                 <p>Temperature: </p>
                 <p>Wind: </p>
                 <p>Humidity: </p>
@@ -45,4 +45,5 @@
     </main>
     <script src="./script.js"></script>
 </body>
+<!-- <img src="./assets/Weather_style.jpeg"></img> -->
 </html>
