add search area function

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://pro.openweathermap.org/data/2.5/forecast/hourly?lat={lat}&lon={lon}&appid=4hvR8d7eaHdWg1tmEP8XtVYXwQTVRHiR"></script>
+    <!-- <script src="https://pro.openweathermap.org/data/2.5/forecast/hourly?lat={lat}&lon={lon}&appid=4hvR8d7eaHdWg1tmEP8XtVYXwQTVRHiR"></script> -->
     <link rel="stylesheet" href="./assets/style.css">
     <title>Weather Dashboard</title>
 </head>
@@ -15,7 +15,7 @@
         <aside id="search-area">
             <h2 style="color: rgb(8, 8, 118);">Search for a City</h2>
             <form>
-                <input placeholder="Search"/>
+                <input id="search-input" placeholder="Search"/>
                 <button>Search</button>
             </form>
             <hr />
