--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         </aside>
         <div id="weather-area">
             <div>
-                <h2 style="color: rgb(8, 8, 118)">London date</h2>
-                <p>Temperature: </p>
-                <p>Wind: </p>
-                <p>Humidity: </p>
+                <h2 id="city_name" style="color: rgb(8, 8, 118)">London date</h2>
+                <p id="temp">Temperature: </p>
+                <p id="wind">Wind: </p>
+                <p id="humidity">Humidity: </p>
             </div>
         
             <div>
