--- a/index.html
+++ b/index.html
@@ -34,11 +34,36 @@
             <div>
                 <h2 style="color: rgb(8, 8, 118); padding: 15px; text-align: center;">5-Day forecast</h2>
                 <div id="forecast-cards">
-                    <div class="card">card1</div>
-                    <div class="card">card2</div>
-                    <div class="card">card3</div>
-                    <div class="card">card4</div>
-                    <div class="card">card5</div>
+                    <div class="card">card1
+                        <h3 id="date1"></h3>
+                        <p id="temp1"></p>
+                        <p id="wind1"></p>
+                        <p id="humidity1"></p>
+                    </div>
+                    <div class="card">card2
+                        <h3 id="date2"></h3>
+                        <p id="temp2"></p>
+                        <p id="wind2"></p>
+                        <p id="humidity2"></p>
+                    </div>
+                    <div class="card">card3
+                        <h3 id="date3"></h3>
+                        <p id="temp3"></p>
+                        <p id="wind3"></p>
+                        <p id="humidity3"></p>
+                    </div>
+                    <div class="card">card4
+                        <h3 id="date4"></h3>
+                        <p id="temp4"></p>
+                        <p id="wind4"></p>
+                        <p id="humidity4"></p>
+                    </div>
+                    <div class="card">card5
+                        <h3 id="date5"></h3>
+                        <p id="temp5"></p>
+                        <p id="wind5"></p>
+                        <p id="humidity5"></p>
+                    </div>
                 </div>
             </div>
         </div>
