added code for cards 1-3

--- a/index.html
+++ b/index.html
@@ -34,32 +34,37 @@
             <div>
                 <h2 style="color: rgb(8, 8, 118); padding: 15px; text-align: center;">5-Day forecast</h2>
                 <div id="forecast-cards">
-                    <div class="card">card1
+                    <div class="card">
                         <h3 id="date1"></h3>
+                        <img src="" alt="" id="image1">
                         <p id="temp1"></p>
                         <p id="wind1"></p>
                         <p id="humidity1"></p>
                     </div>
-                    <div class="card">card2
+                    <div class="card">
                         <h3 id="date2"></h3>
+                        <img src="" alt="" id="image2">
                         <p id="temp2"></p>
                         <p id="wind2"></p>
                         <p id="humidity2"></p>
                     </div>
-                    <div class="card">card3
+                    <div class="card">
                         <h3 id="date3"></h3>
+                        <img src="" alt="" id="image3">
                         <p id="temp3"></p>
                         <p id="wind3"></p>
                         <p id="humidity3"></p>
                     </div>
-                    <div class="card">card4
+                    <div class="card">
                         <h3 id="date4"></h3>
+                        <img src="" alt="" id="image4">
                         <p id="temp4"></p>
                         <p id="wind4"></p>
                         <p id="humidity4"></p>
                     </div>
-                    <div class="card">card5
+                    <div class="card">
                         <h3 id="date5"></h3>
+                        <img src="" alt="" id="image5">
                         <p id="temp5"></p>
                         <p id="wind5"></p>
                         <p id="humidity5"></p>
